# Bike-Computer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  coil_gen.xlsx  hw.txt  parts_list.txt  pcb_TODO  ports_req.txt  struct_to_string copy.py
bike_computer_v2/: .gitignore  CMakeLists.txt  Makefile  main.cpp
bike_computer_v2/app/: gsm_console.cpp  test.cpp
bike_computer_v2/drivers/display/src/: driver.cpp  font12.c  print.cpp
bike_computer_v2/drivers/speedometer/: CMakeLists.txt
bike_computer_v2/drivers/speedometer/src/: speedometer.cpp
bike_computer_v2/examples/: Pico-SIM868-Test.c
bike_computer_v2/lib/Console/: console.cpp
bike_computer_v2/lib/Fonts/: CMakeLists.txt
bike_computer_v2/lib/tools/include/: ringbuffer.h
bike_computer_v2/lib2/AT_TEST/: AT_Test.c  AT_Test.h
bike_computer_v2/lib2/BT/: BT.h  CMakeLists.txt
bike_computer_v2/lib2/Config/: DEV_GSM_Config.h
bike_computer_v2/lib2/GPS/: CMakeLists.txt  GPS.c
bike_computer_v2/lib2/HTTP/: CMakeLists.txt
bike_computer_v2/lib2/Infrared/: Infrared.h
bike_computer_v2/lib2/Phone_Call/: Phone_Call.c
bike_computer_v2/lib2/SMS/: CMakeLists.txt  SMS.c  SMS.h
bike_computer_v2/lib_DOF/BMP280/: BMP280.c  BMP280.h
bike_computer_v2/lib_DOF/BMP280_pico/: BMP280_pico.c
bike_computer_v2/lib_DOF/I2C/: I2C.c
bike_computer_v2/lib_DOF/IMU/: IMU.c
bike_computer_v2/oled/: CMakeLists.txt
bike_computer_v2/oled/inc/: ImageData.h
bike_computer_v2/oled/include/: OLED_Debug.h  OLED_Driver.h  OLED_Driver.h.gch  OLED_Print.h  fonts.h  fonts.h.gch
bike_computer_v2/oled/include/display/: display.h  screen.h  window.h
bike_computer_v2/oled/src/: OLED_Debug.s  OLED_Driver.cpp  OLED_Driver.s  OLED_Print.cpp  OLED_Print.s  fonts.s
bike_computer_v2/specification/: hw.txt  setup.txt
bike_computer_v2/speedometer/: CMakeLists.txt
bike_computer_v2/speedometer/include/: speedometer.h
bike_computer_v2/speedometer/src/: speedometer.cpp
bike_computer_v2/tools/: CMakeLists.txt
bike_computer_v2/tools/include/: traces.h
bike_computer_v3/: .gitignore  CMakeLists.txt  Makefile  serial.bat
bike_computer_v3/app/: gsm_console.cpp  main.cpp  test.cpp
bike_computer_v3/common/: CMakeLists.txt
bike_computer_v3/common/include/: bike_config.hpp  common_actors.hpp  common_types.h  common_utils.hpp  core1.h  core_utils.hpp  csv_interface.hpp  display_context.hpp  gear_suggestion.hpp  session.hpp  types.h
bike_computer_v3/common/include/gui/: structure.hpp  view_all.hpp  view_gear.hpp  view_session.hpp  view_velocity.hpp
bike_computer_v3/common/src/: bike_config.cpp  common_actors.cpp  common_data.cpp  common_types.cpp  common_utils.cpp  core0.cpp  core1.cpp  session.cpp  types.cpp
bike_computer_v3/common/src/gui/: main_history.cpp  main_new_session.cpp  structure.cpp  view_date.cpp  view_forecast.cpp  view_gps.cpp  view_max_avg.cpp  view_session.cpp  view_velocity.cpp
bike_computer_v3/data/: analyze.py  gear_plotter.py  gear_suggestion.py  gps_plotter.py  speed_plotter.py
bike_computer_v3/drivers/DOF/BMP280/: BMP280.cpp  BMP280.hpp  CMakeLists.txt
bike_computer_v3/drivers/cadence/: CMakeLists.txt
bike_computer_v3/drivers/display/: CMakeLists.txt
bike_computer_v3/drivers/gsm/: CMakeLists.txt
bike_computer_v3/drivers/interrupts/: CMakeLists.txt
bike_computer_v3/drivers/speedometer/: CMakeLists.txt
bike_computer_v3/examples/: CMakeLists.txt  Pico-SIM868-Test.h
bike_computer_v3/lib/Console/: CMakeLists.txt  console.cpp
bike_computer_v3/lib/Parser/: lexer.l  parser.y
bike_computer_v3/lib/SD/: CMakeLists.txt
bike_computer_v3/lib/gui/: CMakeLists.txt
bike_computer_v3/lib/tools/: CMakeLists.txt
bike_computer_v3/lib/views/: CMakeLists.txt
bike_computer_v3/lib2/AT_TEST/: CMakeLists.txt
bike_computer_v3/lib2/BT/: BT.c
bike_computer_v3/lib2/Config/: CMakeLists.txt  DEV_GSM_Config.c  DEV_GSM_Config.h
bike_computer_v3/lib2/GPS/: GPS.h
bike_computer_v3/lib2/HTTP/: HTTP.c  HTTP.h
bike_computer_v3/lib2/Infrared/: CMakeLists.txt  Infrared.c
bike_computer_v3/lib2/Phone_Call/: CMakeLists.txt  Phone_Call.h
bike_computer_v3/lib_DOF/BMP280/: CMakeLists.txt
bike_computer_v3/lib_DOF/BMP280_pico/: BMP280_pico.h  CMakeLists.txt
bike_computer_v3/lib_DOF/I2C/: CMakeLists.txt  I2C.h
bike_computer_v3/lib_DOF/IMU/: CMakeLists.txt  IMU.h
bike_computer_v3/lib_DOF/MPU9250/: MPU9250.c  MPU9250.h
bike_computer_v3/release/: pico_main.uf2
bike_computer_v3/source/_junk/: lastval.cpp  lastval.h
bike_computer_v3/source/app/: gsm_console.cpp  main.cpp  test.cpp
bike_computer_v3/source/tests/: CMakeLists.txt  tc_basic.cpp  test.cpp
bike_computer_v3/specification/: AT.txt  LOG.TXT  hw.txt  notes.txt  uart_irq.cpp  wymagania.txt
bike_computer_v3/tests/: CMakeLists.txt  test.cpp  test_actors.cpp  test_actors_multicore.cpp
bike_computer_v3/tests/bc_test/: CMakeLists.txt  bc_test.cpp  bc_test.h
bike_computer_v3/tests/host/: CMakeLists.txt  test_parser.cpp
bike_computer_v3/tests/hw/: CMakeLists.txt  target_main.cpp  target_main_1.cpp
bike_computer_v3/tools/: serial.bat  supress_warnings.txt  warnings.sh
bike_computer_v3/tools/doxygen/: Doxyfile
source/app/cores/: CMakeLists.txt
source/app/gui/: CMakeLists.txt
source/drivers/BMP280/: CMakeLists.txt
source/drivers/DOF/: CMakeLists.txt
source/drivers/DOF/src/: dof.cpp  (+1 more)
source/drivers/MPU9250/: CMakeLists.txt
source/drivers/cadence/: CMakeLists.txt
source/drivers/display/: CMakeLists.txt
source/drivers/interrupts/: CMakeLists.txt
source/drivers/sim868/: CMakeLists.txt
source/drivers/speedometer/: CMakeLists.txt
source/lib/Actors/: CMakeLists.txt
source/lib/tools/: CMakeLists.txt
tests/: CMakeLists.txt
tests/host/: CMakeLists.txt  config_file.txt  host_main.cpp  main.cpp  main_gps.cpp  test_actors.cpp  test_bat.cpp  test_bmp280.cpp  test_display.cpp  test_gps_display.cpp  test_imgui.cpp  test_plot.cpp  test_sd.cpp  test_sim868.cpp  test_speed.cpp
tests/host/mock/: CMakeLists.txt
tests/host/sd_card_mock/: config_file.txt
tests/hw/: CMakeLists.txt  target_main.cpp
tests/hw/hw_config/: config_local.yaml
(+483 files in other folders)
